--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "@material-ui/icons": "3.0.2",
     "prop-types": "15.7.2",
     "react": "16.8.6",
-    "react-dom": "16.8.6",
-    "react-phone-number-input": "^2.3.11"
+    "react-dom": "16.8.6"
   },
   "scripts": {
     "start": "react-scripts start",
