--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
-    "faker": "^4.1.0",
+    "firebase": "^5.9.4",
     "lodash": "^4.17.11",
     "prop-types": "15.7.2",
     "react": "16.8.6",
