--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@firebase/util": "^0.2.12",
     "@material-ui/core": "3.9.3",
     "@material-ui/icons": "3.0.2",
     "firebase": "^5.9.4",
-    "lodash": "^4.17.11",
+    "lodash": "4.17.11",
     "prop-types": "15.7.2",
     "react": "16.8.6",
     "react-dom": "16.8.6",
-    "semantic-ui-react": "^0.86.0"
+    "semantic-ui-react": "0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
